NXP-10275: fix graph is too much on the left

--- a/nuxeo-platform-document-routing-web/src/main/resources/css/documentRoutingGraph.css
+++ b/nuxeo-platform-document-routing-web/src/main/resources/css/documentRoutingGraph.css
@@ -47,6 +47,3 @@
 .targetDiv {
 	position: relative;
 }
-
-.jsPlumb_LabelOverlay {
-}
